# whitespace-python

./: CHANGELOG.rst  LICENSE  MANIFEST.in  Pipfile  README.rst  setup.cfg  setup.py
tests/: test_console.py  test_interpreter.py  test_memory.py  test_parser.py  test_peripherals.py  test_stack.py  test_vm.py
tests/fixtures/: fact.ws
tests/instructions/: test_arithmetic.py  test_flow_control.py  test_heap_access.py  test_io.py  test_stack_manipulation.py
whitespace/: __init__.py  cli.py  console.py  error.py  interpreter.py  memory.py  parser.py  peripherals.py  stack.py  vm.py
whitespace/instructions/: __init__.py  arithmetic.py  flow_control.py  heap_access.py  instruction.py  io.py  stack_manipulation.py
