[metadata]
name = whitespace
version = attr: whitespace.__version__
description = A Whitespace interpreter.
long_description = file: README.rst
url = https://github.com/dwayne/whitespace-python
author = Dwayne Crooks
author_email = me@dwaynecrooks.com
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development :: Interpreters
keywords = whitespace

[options]
packages = whitespace, whitespace.instructions
